--- a/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -20,29 +20,31 @@
             <form class="p-a-1" asp-action="RsvpForm" method="post">
                 <div asp-validation-summary="All"></div>
                 <div class="container">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label asp-for="Name">Your name:</label>
-                            <input class="form-control" asp-for="Name" />
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Email">Your email:</label>
-                            <input class="form-control" asp-for="Email" />
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Phone">Your phone:</label>
-                            <input class="form-control" asp-for="Phone" />
-                        </div>
-                        <div class="form-group">
-                            <label>Will you attend?</label>
-                            <select class="form-control" asp-for="WillAttend">
-                                <option value="">Choose an option</option>
-                                <option value="true">Yes, I'll be there</option>
-                                <option value="false">No, I can't come</option>
-                            </select>
-                        </div>
-                        <div class="text-center">
-                            <button class="btn btn-primary" type="submit">Submit RSVP</button>
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <div class="form-group">
+                                <label asp-for="Name">Your name:</label>
+                                <input class="form-control" asp-for="Name" />
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Email">Your email:</label>
+                                <input class="form-control" asp-for="Email" />
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Phone">Your phone:</label>
+                                <input class="form-control" asp-for="Phone" />
+                            </div>
+                            <div class="form-group">
+                                <label>Will you attend?</label>
+                                <select class="form-control" asp-for="WillAttend">
+                                    <option value="">Choose an option</option>
+                                    <option value="true">Yes, I'll be there</option>
+                                    <option value="false">No, I can't come</option>
+                                </select>
+                            </div>
+                            <div class="text-center">
+                                <button class="btn btn-primary" type="submit">Submit RSVP</button>
+                            </div>
                         </div>
                     </div>
                 </div>
